--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Art Nouveau Dashboard</title>
+
+    <!-- ✅ Art Nouveau Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ✅ Optional: Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+  <body class="bg-nouveau-bg text-white font-sans">
+    <!-- ✅ React root mount point -->
+    <div id="root"></div>
+
+    <!-- ✅ Entry point for Vite -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
